--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -23,4 +23,4 @@
 @import "dark-mode";
 
 /* Animate.css custom build (just selected animations to minimize bundle size) */
-@import "../css/animate.min.css";
+//@import "../css/animate.min.css";
