--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,5 +22,7 @@
 @import "misc";
 @import "dark-mode";
 
+@import "date-api.scss"
+
 /* Animate.css custom build (just selected animations to minimize bundle size) */
 //@import "../css/animate.min.css";
