--- a/assets/scss/_aside.scss
+++ b/assets/scss/_aside.scss
@@ -63,6 +63,11 @@ aside.aside {
   }
 
   .menu-list {
+    //ZZZZZ
+    background-color: pink;
+    padding: 10px;
+
+
     li {
       &.is-active {
         box-shadow: 0 1px $base-color-light;
@@ -164,6 +169,50 @@ aside.aside {
     }
     aside.aside {
       left: 0;
+    }
+  }
+}
+
+
+// Phil
+aside.column.section {
+  // margin-left: 15px;
+  padding-left: 10px;
+  padding-right: 30px;
+  // background-color: red;
+
+  ul {
+    margin-left: 20px;
+    // background-color: yellow;
+
+    li {
+      // background-color: pink;
+      // padding-left: 10px;
+      // padding-right: 10px;
+
+      icon {
+        margin-left: 20px;
+        margin-right: 40px;
+      }
+      margin-left: 0px;
+      margin-right: 0px;
+      // padding-left: 15px;
+
+      a {
+        padding-left: 10px;
+      }
+
+      .is-active {
+        background-color: #25b063;
+        border-radius: 8px;
+        color: #fff;
+        opacity: 1.0;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.43;
+        letter-spacing: normal;
+      }
     }
   }
 }
