Pipelines - clone, edit draft, commit + darker theme
+ transactionType => pipeline type
+ tighter tables
+ pipeline timestamp and commit message

--- a/assets/scss/_dark-mode.scss
+++ b/assets/scss/_dark-mode.scss
@@ -245,7 +245,8 @@ html {
       // color: $dark-mode-link-color;
       // Phil
       // opacity: 0.4;
-      font-family: "Work Sans";
+      // font-family: "Work Sans";
+      font-family: "Open Sans";
       font-size: 14px;
       font-weight: normal;
       font-stretch: normal;
@@ -253,7 +254,6 @@ html {
       line-height: 1.43;
       letter-spacing: normal;
       color: #fff;
-
     }
 
     .media {
