--- a/assets/scss/_theme-default.scss
+++ b/assets/scss/_theme-default.scss
@@ -143,6 +143,7 @@ $state-colors:
 // $dark-mode-background-color: $black-ter;
 // $dark-mode-lighter-background-color: $grey-darker;
 $dark-mode-background-color: #28253a;
+$dark-mode-background-color: black;
 $dark-mode-lighter-background-color: red;
 $dark-mode-yarp-background-color: #36334b;
 
