--- a/assets/scss/_dark-mode.scss
+++ b/assets/scss/_dark-mode.scss
@@ -245,8 +245,8 @@ html {
       // color: $dark-mode-link-color;
       // Phil
       // opacity: 0.4;
-      // font-family: "Work Sans";
-      font-family: "Open Sans";
+      font-family: "Work Sans";
+      // font-family: "Open Sans";
       font-size: 14px;
       font-weight: normal;
       font-stretch: normal;
@@ -338,6 +338,7 @@ html {
         // Phil
         background-color: #25b063;
         // margin: 0 0 0 23.9px;
+        // font-family: "San Francisco,Work Sans";
         font-family: "Work Sans";
         font-size: 14px;
         font-weight: bold;
