--- a/assets/scss/_theme-default.scss
+++ b/assets/scss/_theme-default.scss
@@ -7,7 +7,8 @@ $default-padding: $size-base * 1.5;
 
 /* Default font */
 //Phil $family-sans-serif: "Nunito", sans-serif;
-$family-sans-serif: "Web-Sans", sans-serif;
+// $family-sans-serif: "Web-Sans", sans-serif;
+$family-sans-serif: "Open Sans", sans-serif;
 
 /* Base color */
 $base-color: #2e323a;
