--- a/assets/scss/date-api.scss
+++ b/assets/scss/date-api.scss
@@ -18,7 +18,7 @@
 //   color: rgba(255, 255, 255, 0.8);
 // }
 
-.datemon-heading-icon {
+.mondat-heading-icon {
   display: inline-block;
   color: #16aa58;
   padding-right: 20px;
